Fixed alignment issues

--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -3,6 +3,8 @@
   margin: auto;
   border: 1px solid lightgray;
   margin-top: 10px !important;
+  padding-bottom: 50px;
+  margin-bottom: 10px !important;
 }
 .home-page {
   max-width: 1280px;
